feat: add twitter client and hook up to trigger
