# backend/open-api/swagger.json
@@ -17,44 +17,6 @@
       }
     },
     "schemas": {
-      "Organisation": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number"
-          },
-          "uuid": {
-            "type": "string"
-          },
-          "ownerId": {
-            "type": "number"
-          },
-          "name": {
-            "type": "string"
-          },
-          "createdDate": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "updateDate": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "deletedDate": {
-            "format": "date-time",
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "uuid",
-          "ownerId",
-          "name",
-          "createdDate",
-          "updateDate",
-          "deletedDate"
-        ]
-      },
       "Person": {
         "type": "object",
         "properties": {
@@ -116,23 +78,6 @@
           "updateDate",
           "deletedDate"
         ]
-      },
-      "UpdateOrganisationDto": {
-        "type": "object",
-        "properties": {
-          "members": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Person"
-            }
-          },
-          "owner": {
-            "$ref": "#/components/schemas/Person"
-          },
-          "name": {
-            "type": "string"
-          }
-        }
       },
       "UpdatePersonDto": {
         "type": "object",
@@ -463,146 +408,6 @@
         ]
       }
     },
-    "/organisation/{uuid}": {
-      "get": {
-        "operationId": "OrganisationController_findOne",
-        "parameters": [
-          {
-            "name": "uuid",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Organisation"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "organisations"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      },
-      "patch": {
-        "operationId": "OrganisationController_update",
-        "parameters": [
-          {
-            "name": "uuid",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateOrganisationDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Organisation"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "organisations"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      },
-      "delete": {
-        "operationId": "OrganisationController_remove",
-        "parameters": [
-          {
-            "name": "uuid",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Organisation"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "organisations"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      }
-    },
-    "/organisation": {
-      "get": {
-        "operationId": "OrganisationController_findAllForUser",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Organisation"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "organisations"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      }
-    },
     "/person": {
       "get": {
         "operationId": "PersonController_findSelf",
@@ -883,6 +688,61 @@
         },
         "tags": [
           "Triggers"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/twitter-client": {
+      "get": {
+        "operationId": "TwitterClientController_findAll",
+        "parameters": [
+          {
+            "name": "twitterName",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "query",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "since",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "format": "date-time",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Custom Bot"
         ],
         "security": [
           {
